--- a/low_mach.tex
+++ b/low_mach.tex
@@ -1049,7 +1049,8 @@ liquid water & 2.35 & 1816 & $10^9$ & $-1167.10^3$   \\
 \end{center}
 \end{table}
 %
-\eqt{eq:eos} degenerates to the Ideal Gas equation of state by setting $q$ and $P_\infty$ to zero. The Ideal and Stiffened Gas equation of states have a convex entropy $s$:
+The ideal gas equation of state is recovered by setting $q=P\infty=0$ in \eqt{eq:eos}. 
+The entropy function for the stiffened gas equation of state is convex and given by
 %
 \begin{equation*}
 s = C_v \ln \left( \frac{P+P_\infty}{\rho^{\gamma-1}} \right) 
