--- a/low_mach.tex
+++ b/low_mach.tex
@@ -1278,13 +1278,13 @@ $320$&$7.0896$ $10^{-2}$& $0.44688$ & $1.2763$ $10^{4}$ & $0.43571$ & $23.138$& 
 
 The 1-D Leblanc shock tube is a Riemann problem designed to test the robustness and the accuracy of stabilization methods. The initial conditions are given in \tbl{tbl:ic_1d_tests}. The ideal gas equation of state (with $\gamma=5/3$) is used to compute the pressure. % with the following heat capacity ratio $\gamma=5/3$.
 This test is computationally challenging because of the large pressure ratio at the shock interface.
-The computational domain consists of a 1-D pipe of length $L=9m$ with an interface located at $x=2m$. At $t=0.s$, the interface is removed, allowing the fluid to move. The numerical solution is run until $t=4.s$ and the density, momentum and total energy profiles are given in \fig{fig:1d_leblanc_vel}, \fig{fig:1d_leblanc_density} and \fig{fig:1d_leblanc_press}, respectively, along with the exact solution. The viscosity coefficients are also plotted in \fig{fig:1d_leblanc_visc}. These plots were  run with three different uniform mesh of $800$, $3200$ and $6000$ cells and a constant $CFL = 1$.
+The computational domain consists of a 1-D straight pipe of length $L=9m$ with the initial interface located at $x=2m$. At $t=0.s$, the interface is removed. The numerical solution is run until $t=4 s$ and the density, momentum and total energy profiles are given in \fig{fig:1d_leblanc}, along with the exact solution. The viscosity coefficients are also plotted in \fig{fig:1d_leblanc_visc}. These plots were  run with three different uniform mesh of $800$, $3200$ and $6000$ cells and a constant $CFL = 1$.
 \begin{figure}[H]
         \centering
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{Leblanc_exact_and_numerical_stt_density_6000.png}
-                \caption{Density profile.}
+                \caption{Density}
                 \label{fig:1d_leblanc_vel}
         \end{subfigure}%
         %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
@@ -1292,7 +1292,7 @@ The computational domain consists of a 1-D pipe of length $L=9m$ with an interfa
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{Leblanc_exact_and_numerical_stt_momentum_6000.png}
-                \caption{Momentum profile.}
+                \caption{Momentum}
                 \label{fig:1d_leblanc_density}
         \end{subfigure}
          %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
@@ -1300,7 +1300,7 @@ The computational domain consists of a 1-D pipe of length $L=9m$ with an interfa
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{Leblanc_exact_and_numerical_stt_total_energy_6000.png}
-                \caption{Total energy profile.}
+                \caption{Total energy}
                 \label{fig:1d_leblanc_press}
         \end{subfigure}
           %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
@@ -1308,17 +1308,20 @@ The computational domain consists of a 1-D pipe of length $L=9m$ with an interfa
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{Leblanc_viscosity_numerical_6000.png}
-                \caption{Viscosity coefficients.}
+                \caption{Viscosity coefficients}
                 \label{fig:1d_leblanc_visc}
         \end{subfigure}
-        \caption{Numerical solution for the 1-D Leblanc shock tube at $t=4.s$.}\label{fig:1d_lebalnc}
+        \caption{Exact and Numerical solutions for the 1-D Leblanc shock tube at $t=4 s$.}\label{fig:1d_leblanc}
 \end{figure}
- The density, momentum and total energy profiles given in \fig{fig:1d_lebalnc} do not display any oscillations. In \fig{fig:1d_leblanc_density}, the shock region is zoomed in for better resolution: the shock is well resolved and do not show any oscillation. It is also observed that the shock position of the numerical solution converges to the exact position when refining the mesh. The contact wave is shown in \fig{fig:1d_leblanc_density} at $x=4.5m$. The second-order viscosity coefficient profile is shown in \fig{fig:1d_leblanc_visc} and behaves as expected: it saturates to the first-order viscosity in the shock region and thus prevent oscillations from forming. In the contact wave at $x=4.5m$, a smaller peak is observed that is due to the presence of the jumps in the definition of the second-order viscosity coefficient (\eqt{eq:final_def_visc_coeff}).  The Mach number is not plotted but is of the order of $1.3$ right before the shock and reaches a maximum value close to $5$ in the contact region.\\
- %For each plot in \fig{fig:1d_lebalnc}, the numerical solution run the first-order viscosity is also plotted: it is observed that the 
-Once again, a convergence study is performed in order to prove convergence of the numerical solution to the exact solution. As for the vapor phase in the 1-D nozzle (\sct{sec:steam_nozzle}), the expected convergence rate for the L$1$ and L$2$ norms of the error are $1$ and $1/2$, respectively. The exact solution was obtained by running a 1-D Riemann solver and used as a reference solution to compute the L$1$ and L$2$-norms of the error that are reported in \tbl{tbl:l1_norm_leblanc} and \tbl{tbl:l2_norm_leblanc} for the conservative variables: density, momentum and total energy.
-\begin{table}[H]
+%
+The density, momentum and total energy profiles are provided in \fig{fig:1d_lebalnc}. In \fig{fig:1d_leblanc_density}, the shock region is zoomed in for better resolution: the shock is well resolved and do not present any oscillations. We also observed that the shock position computed numerically converges to the exact position under mesh refinement. The contact wave at $x=4.5m$ can be seen in \fig{fig:1d_leblanc_density}. The entropy viscosity coefficient profile is shown in \fig{fig:1d_leblanc_visc} and behaves as expected: it saturates to the first-order viscosity in the shock region, thus preventing oscillations from forming. At the location of the contact wave, a smaller peak is observed that is due to the presence of the jumps in the definition of the entropy viscosity coefficient (\eqt{eq:final_def_visc_coeff}).  The Mach number, not plotted, is of the order of $1.3$ right before the shock and reaches a maximum value close to $5$ in the contact region.\tct{you said it was also subsonic. where?}\\
+% For each plot in \fig{fig:1d_lebalnc}, the numerical solution run the first-order viscosity is also plotted: it is observed that the 
+Once again, a convergence study is performed in order to prove convergence of the numerical solution to the exact solution. As in the previous example (the vapor phase in the 1-D nozzle, \sct{sec:steam_nozzle}), the expected convergence rates in the L$_1$ and L$_2$ norms are $1$ and $1/2$, respectively. The exact solution was obtained by running a 1-D Riemann solver and used as the reference solution to compute the L$_1$ and L$_2$-norms that are reported in \tbl{tbl:l1_norm_leblanc} and \tbl{tbl:l2_norm_leblanc} for the conservative variables: density, momentum and total energy.The convergence rates are in good agreement with the theoretical values.
+
+
+\begin{table}[!htbp]
 \begin{center}
- \caption{\label{tbl:l1_norm_leblanc} L$1$ norm of the error for the 1-D Leblanc test at $t=4.s$.}
+ \caption{\label{tbl:l1_norm_leblanc} L$_1$ norm of the error for the 1-D Leblanc test at $t=4s$.}
  \begin{tabular}{|c|c|c|c|c|c|c|}
  \hline
    cells & density & rate & momentum & rate \\
@@ -1357,7 +1360,7 @@ cells & total energy & rate \\ \hline
 \end{table}
 \begin{table}[H]
 \begin{center}
- \caption{\label{tbl:l2_norm_leblanc} L$2$ norm of the error for the 1-D Leblanc test at $t=4.s$.}
+ \caption{\label{tbl:l2_norm_leblanc} L$_2$ norm of the error for the 1-D Leblanc test at $t=4s$.}
  \begin{tabular}{|c|c|c|c|c|c|c|}
  \hline
    cells & density & rate & momentum & rate \\
@@ -1394,7 +1397,7 @@ $12800$ & $1.0299897$ $10^{-5}$ & $0.51032105$\\  \hline
 \end{center}
 \nonumber
 \end{table}
-The convergence rates are close to the expected values which prove convergence of the numerical solution to the exact solution.
+
 %---------------------------------------------------------------------------------------------------
 \subsection{1-D shock tube for liquid phase} \label{sec:liquid_shock}
 %---------------------------------------------------------------------------------------------------
